--- a/main.css
+++ b/main.css
@@ -1,10 +1,51 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* color: blue; */
+}
+.navbar{
+    display: flex;
+    align-items: center;
+    padding: 20px;
+
+}
+nav{
+    flex: 1;
+    text-align: right;
+}
+nav ul{
+    display: inline-block;
+    list-style-type: none;
+}
+nav ul li{
+    display: inline-block;
+    margin-right: 20px;
+    font-family: 'Unbounded';
+    color: blue;
+}
+.nav-links ul li a{
+    color: blue;
+}
 h1{
     position: relative;
     left: 40%;
     font-family: 'Unbounded', cursive;
     font-size: large;
+    flex-basis: 50%;
+    min-width: 300px;
+    margin-bottom: 10px;
 }
-
+.form-group{
+    margin-bottom: 5px;
+    /* left: 40%;
+    position: relative; */
+    font-family: 'Unbounded', cursive;
+}
+input{
+    font-family: 'Unbounded', cursive;
+    /* font-size: large; */
+}
 .table{
     border-collapse: collapse;
     margin: 25px 0;
@@ -39,4 +80,26 @@ h1{
 .table tbody tr:nth-child(odd):hover{
     background-color: rgb(139, 210, 149);
     color: black;
+}
+.bottom-nav-links{
+    margin: auto;
+    background-color: white;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 5px;
+    text-align: center;
+    font-family: 'Unbounded', cursive;
+}
+
+.bottom-nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.bottom-nav-links a{
+    color: blue;
 }
